RegressionTests/TestSuiteExport/reject/invalid_yieldto_target.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidYieldtoTarget

fn helper() {
}

coro fn worker() {
    yieldto helper();
}

cog task main() {
}